# Proyecto-Juego

./: CMakeLists.txt  README.md  makefile
.github/workflows/: publish.yml
include/: AnimatedSprite.h  Player.h
src/: AnimatedSprite.cpp  Player.cpp  main.cpp
